Fixed header, form defaults, and line wrap.

--- a/css/app.css
+++ b/css/app.css
@@ -49,4 +49,7 @@
     font-family: courier;
     background-color: #eee;
     font-weight: 500;
+    word-break: break-all;
+    padding-left: 15px;
+    padding-right: 15px;
 }
